increased z-index of menu, changed image scale size, solved problem with design missmatch

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -5,11 +5,11 @@
     grid-column: 1 / -1;
 
     @include onTablet {
-      grid-column: 1 / 3;
+      grid-column: 1 / 4;
     }
 
     @include onDesktop {
-      grid-column: span 5;
+      grid-column: 1 / 6;
     }
   }
 
@@ -20,7 +20,7 @@
     font-size: 23px;
 
     @include onTablet {
-      grid-column: 4 / 7;
+      grid-column: span 3;
     }
 
     @include onDesktop {
