--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,12 +1,13 @@
 .menu {
   height: 100vh;
+  z-index: 1;
   overflow: auto;
   font-weight: 600;
   text-transform: uppercase;
   background-color: #c2c2c2;
 
   &__top {
-    z-index: 1;
+    z-index: 2;
     margin-bottom: 24px;
 
     @include onTablet {
