--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -37,6 +37,6 @@
   }
 
   & img {
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.03));
   }
 }
